# zap

./: .gitignore  Cargo.toml  debug_warp.sh  review.json
.cargo/: config.toml
.github/actions/prepare_environment/: action.yml
.github/workflows/: ci-run.yml  deploy_website.yml  openwarp_release.yml  zap_release.yml
.superpowers/sdd/: task-1-report.md
app/: Cargo.toml  build.rs
app/i18n/en/: warp.ftl
app/i18n/ja/: warp.ftl
app/i18n/zh-CN/: warp.ftl
app/src/: app_state.rs  appearance.rs  lib.rs
app/src/ai/: agent_conversations_model_tests.rs
app/src/code/: buffer_location.rs  editor_management.rs  global_buffer_model.rs  local_code_editor.rs  mod.rs  view.rs
app/src/editor/: accept_autosuggestion_keybinding_view.rs
app/src/launch_configs/: launch_config_tests.rs
app/src/persistence/: agent.rs  sqlite.rs  sqlite_tests.rs
app/src/remote_server/: mod.rs  server_buffer_tracker.rs  server_model.rs  ssh_transport.rs
app/src/search/: mod.rs
app/src/server/: telemetry.rs
app/src/settings/: ai.rs  font.rs
app/src/settings_view/: agent_providers_widget.rs  ai_page.rs  mod.rs  (+6 more)
crates/quick_credential/: Cargo.toml
crates/quick_credential/src/: db.rs  lib.rs  repository.rs  repository_tests.rs  secret_store.rs  types.rs
crates/urlocator/: Cargo.toml
crates/urlocator/src/: lib.rs  tests.rs
script/: run
script/linux/: bundle
specs/design/: 01-architecture-overview.md  02-terminal.md  03-ai-agent.md  04-warpui-framework.md  05-persistence.md  06-drive-sync.md  07-editor-completion-search.md  08-cross-platform.md
website/deploy/: deploy.sh
(+297 files in other folders)
